objects/ssot__ProviderVisitMarketingItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Visit Marketing Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductObject__c</fullName>
        <label>Product Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitId__c</fullName>
        <label>Provider Visit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561247820_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitMarketingItem_ProductId_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>ProviderVisitMarketingItem_ProductId_rel</relationshipLabel>
        <relationshipName>rel_1745561247820_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561253026_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitMarketingItem_ProductId_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProviderVisitMarketingItem_ProductId_rel</relationshipLabel>
        <relationshipName>rel_1745561253026_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561267685_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitMarketingItem_ProviderV_rel</label>
        <referenceTo>ssot__ProviderVisit__dlm</referenceTo>
        <relationshipLabel>ProviderVisitMarketingItem_ProviderV_rel</relationshipLabel>
        <relationshipName>rel_1745561267685_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>